fix ui alignment

--- a/static/css/perf_style.css
+++ b/static/css/perf_style.css
@@ -5,10 +5,10 @@ body {
 
 .floatright {
   float: right;
-  margin: 0 4px;
 }
 
 .floatleft {
+  clear: both;
   float: left;
 }
 
